# Scrape_Table

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_app.py
templates/: result.html  upload.html
