[project]
name = "scrape-table"
version = "0.1.0"
description = "A simple web application that extracts tables from PDF files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "werkzeug>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["test_app.py"]
python_files = "test_*.py"
